--- a/diabetes_prediction/diabetes_models.ipynb
+++ b/diabetes_prediction/diabetes_models.ipynb
@@ -2588,7 +2588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14 (main, Mar 21 2024, 11:21:31) [Clang 14.0.6 ]"
+   "version": "3.10.14"
   },
   "orig_nbformat": 4,
   "vscode": {
